tests/tooling/fixtures/native/execution/negative/compound_assignment_bitwise_unknown_target.objc3
module CompoundAssignmentBitwiseUnknownTarget;

fn main() -> i32 {
  value <<= 1;
  return 0;
}
